# backend

./: .dockerignore  .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  package-lock.json  package.json  pyproject.toml  render.yaml  tsconfig.json  tsconfig.test.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  task.yml
analytics/: config.py  db.py
docs/: AI_DEVELOPMENT.md  AUTHENTICATION_FEATURE.md  BRANCHING_STRATEGIES.md  DEVELOPMENT.md  REPO_SETUP.md  WORKFLOW.md  authentication_feature.md
prisma/: schema.prisma
scripts/: render-start.sh
src/: app.ts  index.ts
src/__tests__/: app.test.ts  env.test.ts  jwt.test.ts  prisma.test.ts
src/auth/: errors.ts  jwt.ts
src/config/: env.ts
src/lib/: prisma.ts
tests/: test_health.py
tools/ai/: check-env.ts
